--- a/src/main/resources/templates/basic/items.html
+++ b/src/main/resources/templates/basic/items.html
@@ -34,7 +34,7 @@
       <tbody>
       <tr th:each="item : ${items}">
         <td><a href="item.html" th:href="@{/basic/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원 id</a></td>
-        <td><a href="item.html" th:href="@{/basic/items/${item.id}}" th:text="${item.itemName}">상품 이름</a></td>
+        <td><a href="item.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품 이름</a></td>
         <td th:text="${item.price}">상품 가격</td>
         <td th:text="${item.quantity}">상품 수량</td>
       </tr>
