--- a/src/main/resources/templates/basic/operation.html
+++ b/src/main/resources/templates/basic/operation.html
@@ -29,6 +29,24 @@
       <li>1 != 10 <span th:text="1 != 10"></span></li>
     </ul>
   </li>
+
+  <li>조건식
+    <ul>
+      <li><span th:text="(10 % 2 == 0) ? '짝수':'홀수'"></span></li>
+    </ul>
+  </li>
+  <li>Elvis 연산자
+    <ul>
+      <li><span th:text="${data}?: '데이터가 없습니다.'"></span></li>
+      <li><span th:text="${nulldata}?:'데이터가 없습니다.'"></span></li>
+    </ul>
+  </li>
+  <li>No-Operation
+    <ul>
+      <li><span th:text="${data}?: _">데이터가 없습니다.</span></li>
+      <li><span th:text="${nulldata}?:_">데이터가 없습니다.</span></li>
+    </ul>
+  </li>
 </ul>
 
 </body>
