--- a/src/main/resources/templates/form/items.html
+++ b/src/main/resources/templates/form/items.html
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col">
       <button class="btn btn-primary float-end" onclick="location.href='addForm.html'"
-              th:onclick="|location.href='@{/basic/items/add}'|" type="button">상품 등록</button>
+              th:onclick="|location.href='@{/form/items/add}'|" type="button">상품 등록</button>
     </div>
   </div>
 
@@ -33,8 +33,8 @@
 
       <tbody>
       <tr th:each="item : ${items}">
-        <td><a href="item.html" th:href="@{/basic/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원 id</a></td>
-        <td><a href="item.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품 이름</a></td>
+        <td><a href="item.html" th:href="@{/form/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원 id</a></td>
+        <td><a href="item.html" th:href="@{|/form/items/${item.id}|}" th:text="${item.itemName}">상품 이름</a></td>
         <td th:text="${item.price}">상품 가격</td>
         <td th:text="${item.quantity}">상품 수량</td>
       </tr>
