--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -18,22 +18,22 @@
     <h2>상품 수정 폼</h2>
   </div>
 
-  <form action="item.html" th:action method="post">
+  <form action="item.html" th:action th:object="${item}" method="post">
     <div>
       <label for="id">상품 ID</label>
-      <input type="text" id="id" name="id" class="form-control" value="1" th:value="${item.id}" readonly>
+      <input type="text" th:field="*{id}" class="form-control" readonly>
     </div>
     <div>
       <label for="itemName">상품명</label>
-      <input type="text" id="itemName" name="itemName" class="form-control" th:value="${item.itemName}" value="상품A">
+      <input type="text" th:field="*{itemName}" class="form-control">
     </div>
     <div>
       <label for="price">가격</label>
-      <input type="text" id="price" name="price" class="form-control" th:value="${item.price}" value="10000">
+      <input type="text" th:field="*{price}" class="form-control" >
     </div>
     <div>
       <label for="quantity">수량</label>
-      <input type="text" id="quantity" name="quantity" class="form-control" th:value="${item.quantity}" value="10">
+      <input type="text" th:field="*{quantity}" class="form-control">
     </div>
     <hr class="my-4">
     <div class="row">
