--- a/src/main/resources/templates/form/item.html
+++ b/src/main/resources/templates/form/item.html
@@ -35,8 +35,17 @@
     <label for="quantity">수량</label>
     <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}" readonly>
   </div>
-
   <hr class="my-4">
+
+  <!--  단일 체크박스-->
+  <div>판매 여부</div>
+  <div>
+    <div class="form-check">
+      <input type="checkbox" id="open" th:field="${item.open}" class="form-check-input" disabled>
+      <label for="open" class="form-check-label">판매 오픈</label>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col">
       <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'"
