--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -55,6 +55,15 @@
       </div>
     </div>
 
+<!--    라디오 버튼-->
+    <div>상품 지역</div>
+    <div>
+      <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+        <input type="radio" th:field="${item.itemType}" th:value="${type.name()}" class="form-check-input">
+        <label th:for="${#ids.prev('itemType')}" th:text="${type.description}" class="form-check-label"></label>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col">
         <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
