--- a/src/main/resources/templates/form/item.html
+++ b/src/main/resources/templates/form/item.html
@@ -55,6 +55,15 @@
     </div>
   </div>
 
+<!--  라디오 버튼-->
+  <div>상품 종류</div>
+  <div>
+    <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+      <input type="radio" th:field="${item.itemType}" th:value="${type.name()}" class="form-check-input" disabled>
+      <label th:for="${#ids.prev('itemType')}" th:text="${type.description}" class="form-check-label">상품</label>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col">
       <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'"
