--- a/src/main/resources/templates/form/addForm.html
+++ b/src/main/resources/templates/form/addForm.html
@@ -14,29 +14,29 @@
 <div class="container">
 
   <div class="py-5 text-center">
-    <h2>상품 등록 폼</h2>
+    <h2 th:text="#{page.addItemForm}">상품 등록 폼</h2>
   </div>
 
-  <h4 class="mb-3">상품 입력</h4>
+  <h4 class="mb-3" th:text="#{page.inputItem}">상품 입력</h4>
 
   <form action="item.html" th:action th:object="${item}" method="post">
     <div>
-      <label for="itemName">상품명</label>
-      <input type="text" th:field="*{itemName}" class="form-control" placeholder="이름을 입력하세요">
+      <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
+      <input type="text" th:field="*{itemName}" class="form-control" th:placeholder="#{input.itemName}">
     </div>
     <div>
-      <label for="price">가격</label>
-      <input type="text" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요">
+      <label for="price" th:text="#{label.item.price}">가격</label>
+      <input type="text" th:field="*{price}" class="form-control" th:placeholder="#{input.price}">
     </div>
     <div>
-      <label for="quantity">수량</label>
-      <input type="text" th:field="*{quantity}" class="form-control" placeholder="수량을 입력하세요">
+      <label for="quantity" th:text="#{label.item.quantity}">수량</label>
+      <input type="text" th:field="*{quantity}" class="form-control" th:placeholder="#{input.quantity}">
     </div>
 
     <hr class="my-4">
 
 <!--    단일 체크박스-->
-    <div>판매 여부</div>
+    <div th:text="#{label.item.open}">판매 여부</div>
     <div>
       <div class="form-check">
         <input type="checkbox" id="open" th:field="*{open}" class="form-check-input"/>
@@ -46,7 +46,7 @@
     </div>
 
 <!--    다중 체크박스-->
-    <div>등록 지역</div>
+    <div th:text="#{label.item.regions}">등록 지역</div>
     <div>
       <div th:each="region : ${regions}" class="form-check form-check-inline">
         <input type="checkbox" th:field="*{regions}" th:value="${region.key}" class="form-check-input">
@@ -55,7 +55,7 @@
     </div>
 
 <!--    라디오 버튼-->
-    <div>상품 종류</div>
+    <div th:text="#{label.item.itemType}">상품 종류</div>
     <div>
       <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
         <input type="radio" th:field="*{itemType}" th:value="${type.name()}" class="form-check-input">
@@ -64,7 +64,7 @@
     </div>
 
 <!--    select 박스-->
-    <div>배송 방식</div>
+    <div th:text="#{label.item.deliveryCode}">배송 방식</div>
     <div>
       <select th:field="${item.deliveryCode}" class="form-select">
         <option value="">==배송 방식 선택==</option>
@@ -74,11 +74,11 @@
 
     <div class="row">
       <div class="col">
-        <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
+        <button class="w-100 btn btn-primary btn-lg" type="submit" th:text="#{page.addItem}">상품 등록</button>
       </div>
       <div class="col">
         <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
-                th:onclick="|location.href='@{/form/items}'|" type="button">취소</button>
+                th:onclick="|location.href='@{/form/items}'|" type="button" th:text="#{button.cancel}">취소</button>
       </div>
     </div>
   </form>
