--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -15,30 +15,30 @@
 <div class="container">
 
   <div class="py-5 text-center">
-    <h2>상품 수정 폼</h2>
+    <h2 th:text="#{page.updateItemForm}">상품 수정 폼</h2>
   </div>
 
   <form action="item.html" th:action th:object="${item}" method="post">
     <div>
-      <label for="id">상품 ID</label>
+      <label for="id" th:text="#{label.item.id}">상품 ID</label>
       <input type="text" th:field="*{id}" class="form-control" readonly>
     </div>
     <div>
-      <label for="itemName">상품명</label>
+      <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
       <input type="text" th:field="*{itemName}" class="form-control">
     </div>
     <div>
-      <label for="price">가격</label>
+      <label for="price" th:text="#{label.item.price}">가격</label>
       <input type="text" th:field="*{price}" class="form-control" >
     </div>
     <div>
-      <label for="quantity">수량</label>
+      <label for="quantity" th:text="#{label.item.quantity}">수량</label>
       <input type="text" th:field="*{quantity}" class="form-control">
     </div>
     <hr class="my-4">
 
     <!--  단일 체크박스-->
-    <div>판매 여부</div>
+    <div th:text="#{label.item.open}">판매 여부</div>
     <div>
       <div class="form-check">
         <input type="checkbox" id="open" th:field="*{open}" class="form-check-input">
@@ -47,7 +47,7 @@
     </div>
 
 <!--    다중 체크박스-->
-    <div>등록 지역</div>
+    <div th:text="#{label.item.regions}">등록 지역</div>
     <div>
       <div th:each="region : ${regions}" class="form-check form-check-inline">
         <input type="checkbox" th:field="${item.regions}" th:value="${region.key}" class="form-check-input">
@@ -56,7 +56,7 @@
     </div>
 
 <!--    라디오 버튼-->
-    <div>상품 지역</div>
+    <div th:text="#{label.item.itemType}">상품 종류</div>
     <div>
       <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
         <input type="radio" th:field="${item.itemType}" th:value="${type.name()}" class="form-check-input">
@@ -65,7 +65,7 @@
     </div>
 
 <!--    select 박스-->
-    <div>배송 방식</div>
+    <div th:text="#{label.item.deliveryCode}">배송 방식</div>
     <div>
       <select th:field="${item.deliveryCode}" class="form-select">
         <option value="">==배송 방식 선택==</option>
@@ -75,12 +75,12 @@
 
     <div class="row">
       <div class="col">
-        <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
+        <button class="w-100 btn btn-primary btn-lg" type="submit" th:text="#{button.save}">저장</button>
       </div>
       <div class="col">
         <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='item.html'"
                 th:onclick="|location.href='@{/form/items/{itemId}(itemId=${item.id})}'|"
-                type="button">취소</button>
+                type="button" th:text="#{button.cancel}">취소</button>
       </div>
     </div>
   </form>
