--- a/src/main/resources/templates/validation/v1/addForm.html
+++ b/src/main/resources/templates/validation/v1/addForm.html
@@ -8,6 +8,10 @@
     .container {
       max-width: 560px;
     }
+    .field-error{
+      border-color: #dc3545;
+      color: #dc3545;
+    }
   </style>
 </head>
 <body>
@@ -20,17 +24,33 @@
   <h4 class="mb-3" th:text="#{page.inputItem}">상품 입력</h4>
 
   <form action="item.html" th:action th:object="${item}" method="post">
+<!--    글로벌 에러 검증 부분-->
+    <div th:if="${errors?.containsKey('globalError')}">
+      <p class="field-error" th:text="${errors['globalError']}">글로벌 에러</p>
+    </div>
     <div>
       <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
-      <input type="text" th:field="*{itemName}" class="form-control" th:placeholder="#{input.itemName}">
+      <input type="text" th:field="*{itemName}" class="form-control" th:classappend="${errors?.containsKey('itemName')} ? 'field-error' : _" th:placeholder="#{input.itemName}">
+<!--      상품명 필드 검증-->
+      <div th:if="${errors?.containsKey('itemName')}" class="field-error" th:text="${errors['itemName']}">
+        상품명 필드 오류
+      </div>
     </div>
     <div>
       <label for="price" th:text="#{label.item.price}">가격</label>
-      <input type="text" th:field="*{price}" class="form-control" th:placeholder="#{input.price}">
+      <input type="text" th:field="*{price}" class="form-control" th:classappend="${errors?.containsKey('price')} ? 'field-error' : _" th:placeholder="#{input.price}">
+<!--      가격 필드 검증-->
+      <div th:if="${errors?.containsKey('price')}" class="field-error" th:text="${errors['price']}">
+        가격 필드 오류
+      </div>
     </div>
     <div>
       <label for="quantity" th:text="#{label.item.quantity}">수량</label>
-      <input type="text" th:field="*{quantity}" class="form-control" th:placeholder="#{input.quantity}">
+      <input type="text" th:field="*{quantity}" class="form-control" th:classappend="${errors?.containsKey('quantity')} ? 'field-error' : _" th:placeholder="#{input.quantity}">
+<!--      수량 필드 검증-->
+      <div th:if="${errors?.containsKey('quantity')}" class="field-error" th:text="${errors['quantity']}">
+        수량 필드 오류
+      </div>
     </div>
 
     <hr class="my-4">
