--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div class="col">
-            <button class="w-100 btn btn-secondary btn-lg" type="button" th:onclick="|location.href='@{/members/add}'|">회원 가입</button>
+            <button class="w-100 btn btn-secondary btn-lg" type="button" th:onclick="|location.href='@{/member/add}'|">회원 가입</button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-dark btn-lg" type="button" onclick="location.href='items.html'" th:onclick="|location.href='@{/login}'|">로그인</button>
