--- a/src/main/resources/templates/validation/addForm.html
+++ b/src/main/resources/templates/validation/addForm.html
@@ -104,7 +104,7 @@
       </div>
       <div class="col">
         <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
-                th:onclick="|location.href='@{/validation/items}'|" type="button" th:text="#{button.cancel}">취소</button>
+                th:onclick="|location.href='@{/items}'|" type="button" th:text="#{button.cancel}">취소</button>
       </div>
     </div>
   </form>
