--- a/src/main/resources/templates/validation/item.html
+++ b/src/main/resources/templates/validation/item.html
@@ -76,11 +76,11 @@
   <div class="row">
     <div class="col">
       <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'"
-              th:onclick="|location.href='@{/validation/items/{itemId}/edit(itemId=${item.id})}'|" type="button" th:text="#{page.updateItem}">상품 수정</button>
+              th:onclick="|location.href='@{/items/{itemId}/edit(itemId=${item.id})}'|" type="button" th:text="#{page.updateItem}">상품 수정</button>
     </div>
     <div class="col">
       <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
-              th:onclick="|location.href='@{/validation/items}'|" type="button" th:text="#{page.toItems}">목록으로</button>
+              th:onclick="|location.href='@{/items}'|" type="button" th:text="#{page.toItems}">목록으로</button>
     </div>
   </div>
 </div> <!-- /container -->
